Improve: Consistent defaults across USearch & Lucene